--- a/LampungGuide/app/src/main/res/values/strings.xml
+++ b/LampungGuide/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
-    <string name="app_name">Lampung Guide</string>
-    <string name="create_account"><font color="#00ff00">text</font></string>
-    <string name="email">Email</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
-    <string name="username">Username</string>
-    <string name="register">Register</string>
-    <string name="back_to_login">Back to Login</string>
+    <string name="app_name">GD1</string>
+    <string name="next">Next</string>
+    <string name="loginMember">Login(Member)</string>
+    <string name="publics">Public</string>
+    <string name="daftar">Daftar</string>
 </resources>
